# gluideme-ihvd0h

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: deploy-prod.yml  deploy-staging.yml  pr-checks.yml  security-scan.yml
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/meilisearch/: Dockerfile  config.toml
infrastructure/docker/nginx/: nginx.conf
infrastructure/docker/nginx/conf.d/: default.conf
infrastructure/docker/redis/: redis.conf
infrastructure/monitoring/grafana/dashboards/: api.json  ecs.json  rds.json
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/monitoring/prometheus/rules/: alerts.yml  recording.yml
infrastructure/scripts/: backup-db.sh  rotate-secrets.sh  scale-ecs.sh  setup-monitoring.sh
infrastructure/terraform/: README.md  backend.tf  provider.tf  versions.tf
infrastructure/terraform/environments/prod/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/environments/staging/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/cloudfront/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/cloudwatch/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/elasticache/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/kms/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/route53/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/ses/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/waf/: main.tf  outputs.tf  variables.tf
src/backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
src/backend/api/: __init__.py
src/backend/api/v1/: __init__.py  schemas.py  serializers.py  urls.py  views.py
src/backend/api/v1/tests/: __init__.py  test_serializers.py  test_views.py
src/backend/apps/: __init__.py
src/backend/apps/core/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/core/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
src/backend/apps/courses/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/courses/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
src/backend/apps/institutions/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/institutions/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
src/backend/apps/requirements/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/requirements/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
src/backend/apps/search/: __init__.py  apps.py  meilisearch.py  pinecone.py  urls.py  views.py
src/backend/apps/search/tests/: __init__.py  test_meilisearch.py  test_pinecone.py  test_views.py
src/backend/apps/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/users/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
src/backend/apps/validation/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/backend/apps/validation/tests/: __init__.py  test_models.py  test_serializers.py  test_views.py
src/backend/celery/: __init__.py  app.py  config.py
src/backend/celery/tasks/: __init__.py  notifications.py  requirements.py  search.py  validation.py
src/backend/config/: __init__.py  asgi.py  urls.py  wsgi.py
src/backend/config/settings/: __init__.py  base.py  development.py  production.py  test.py
src/backend/scripts/: collect-static.sh  entrypoint.sh  migrate.sh  run-tests.sh  start-dev.sh  start-prod.sh
src/backend/utils/: __init__.py  aws.py  cache.py  exceptions.py  middleware.py  pagination.py  permissions.py  validators.py
src/backend/utils/tests/: __init__.py  test_aws.py  test_cache.py  test_validators.py
src/web/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  README.md  docker-compose.yml  jest.config.ts  next-env.d.ts  next.config.ts  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json
src/web/__tests__/: setup.ts
src/web/__tests__/hooks/: useAuth.test.ts
src/web/__tests__/pages/: dashboard.test.tsx  search.test.tsx
src/web/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/web/app/dashboard/: layout.tsx  loading.tsx  page.tsx
src/web/app/search/: layout.tsx  loading.tsx  page.tsx
src/web/app/student/: layout.tsx  loading.tsx  (+1 more)
src/web/config/: api.ts  auth.ts  constants.ts  routes.ts  theme.ts
src/web/hooks/: useAuth.ts  useForm.ts  usePagination.ts  useRequirements.ts  useSearch.ts  useToast.ts
src/web/providers/: auth-provider.tsx  theme-provider.tsx  toast-provider.tsx
src/web/styles/: components.css  globals.css  tailwind.css
src/web/types/: api.ts  auth.ts  common.ts  requirements.ts  search.ts  student.ts
(+65 files in other folders)
