[metadata]
python_version = 3.11

[flake8]
max-line-length = 100
extend-ignore = E203, W503
max-complexity = 10
exclude = 
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    venv,
    .env,
    migrations

per-file-ignores =
    __init__.py: F401
    test_*.py: S101,S105,S106
    conftest.py: S101

[isort]
profile = black
multi_line_output = 3
line_length = 100
known_first_party = 
    apps
    api
    config
    utils
    celery
    transfer
    requirements
    validation
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = THIRDPARTY

[mypy]
python_version = 3.11
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
strict_optional = True
strict_equality = True

plugins = 
    mypy_django_plugin.main
    mypy_drf_plugin.main

exclude = 
    tests/
    migrations/
    manage.py
    config/settings/

[mypy.plugins.django-stubs]
django_settings_module = config.settings.development

[coverage:run]
source = 
    apps
    api
    utils
    celery
    transfer
    requirements
    validation
omit = 
    */tests/*
    */migrations/*
    manage.py
    config/settings/*
    */apps.py
branch = True
parallel = True

[coverage:report]
fail_under = 90
show_missing = True
skip_covered = True
exclude_lines = 
    pragma: no cover
    def __repr__
    if TYPE_CHECKING:
    raise NotImplementedError